deployment/bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-bar
  namespace: default
  labels:
    app: server-bar
spec:
  replicas: 6
  selector:
    matchLabels:
      app: server-bar
  template:
    metadata:
      labels:
        app: server-bar
    spec:
      containers:
        - name: server-bar-container
          image: ravikumarmanchi/bar:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: server-bar
spec:
  selector:
    app: server-bar
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
