deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-demo
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-XXXXXXXXXXXXXX, subnet-XXXXXXXXXXXXXX # Modify this as it will be different
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: server-foo
                port:
                  number: 8080
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: server-bar
                port:
                  number: 8080
